--- a/casc.yaml
+++ b/casc.yaml
@@ -1,4 +1,29 @@
 jenkins:
+  clouds:
+    - docker:
+        name: "docker"
+        dockerApi:
+          dockerHost:
+            uri: "unix:///var/run/docker.sock"
+        templates:
+          - labelString: "docker-agent"
+            dockerTemplateBase:
+              # TODO: pin sha256 or versions when using in production
+              image: "jenkins/agent"
+              mounts:
+                - "type=tmpfs,destination=/run"
+                - "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock"
+                - "type=volume,src=hello,dst=/world"
+              environmentsString: |
+                hello=world
+                foo=bar
+            remoteFs: "/home/jenkins/agent"
+            connector:
+              attach:
+                user: "jenkins"
+            instanceCapStr: "10"
+            retentionStrategy:
+              idleMinutes: 1
   securityRealm:
     local:
       allowsSignup: false
@@ -24,7 +49,7 @@ jobs:
   - script: >
       folder('testjobs')
   - script: >
-      pipelineJob('testjobs/default-agent') {
+      pipelineJob('testjobs/docker') {
         definition {
           cps {
             script("""\
